--- a/pingfederate/instance/server/default/conf/template/pingone-mfa-otp-required.html
+++ b/pingfederate/instance/server/default/conf/template/pingone-mfa-otp-required.html
@@ -24,7 +24,7 @@ is not recommended as it may interfere with expected server behavior.
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,
     user-scalable=no"/>
     <meta http-equiv="x-ua-compatible" content="IE=edge"/>
-    <link rel="stylesheet" href="assets/css/pingone-mfa-adapter.css">
+    <link rel="stylesheet" href="assets/css/pingone-mfa.css">
     <style>
         .page__content:before {
             content: none;
