--- a/pingfederate/instance/server/default/conf/template/pingone-mfa-push-confirmation-timed-out.html
+++ b/pingfederate/instance/server/default/conf/template/pingone-mfa-push-confirmation-timed-out.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,
     user-scalable=no"/>
     <meta http-equiv="x-ua-compatible" content="IE=edge"/>
-    <link rel="stylesheet" href="assets/css/pingone-mfa-adapter.css">
+    <link rel="stylesheet" href="assets/css/pingone-mfa.css">
     <style>
         .page__content:before {
             content: none;
@@ -74,7 +74,6 @@
   </form>
 
 <script type="text/javascript">
-  
     function retry(deviceId) {
         document.forms[0]['$selectedDeviceId'].value = deviceId;
         submit('$selectedDeviceId');
