--- a/pingfederate/instance/server/default/conf/template/pingone-mfa-otp-required.html
+++ b/pingfederate/instance/server/default/conf/template/pingone-mfa-otp-required.html
@@ -13,7 +13,11 @@ is not recommended as it may interfere with expected server behavior.
 <!-- template name: pingone-mfa-otp-required.html -->
 
 #set( $messageKeyPrefix = "pingone.mfa.otp.required." )
-#set ($deviceMessageKey = ${selectedDevice.type.toLowerCase()})
+#if($selectedDevice.type.toLowerCase() == "android" || $device.type.toLowerCase() == "iphone")
+    #set ($deviceMessageKey = "mobile")
+#else
+    #set ($deviceMessageKey = ${selectedDevice.type.toLowerCase()})
+#end
 #set( $deviceMessageKeyPrefix = "${deviceMessageKey}.$messageKeyPrefix" )
 
 <html lang="$locale.getLanguage()" dir="ltr">
@@ -24,7 +28,9 @@ is not recommended as it may interfere with expected server behavior.
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,
     user-scalable=no"/>
     <meta http-equiv="x-ua-compatible" content="IE=edge"/>
+    <link rel="stylesheet" href="assets/css/end-user/0.32.0/end-user.css">
     <link rel="stylesheet" href="assets/css/pingone-mfa.css">
+    <script src="assets/scripts/jquery-3.5.1.min.js"></script>
     <style>
         .page__content:before {
             content: none;
@@ -42,92 +48,108 @@ is not recommended as it may interfere with expected server behavior.
     </style>
 </head>
 <body onload="setFocus()">
-<div class="page brand-background" data-id="page">
-    <div class="page__content">
-        <div class="card card--no-padding">
-            <div class="card__content">
-                <form class="form" data-id="form" method="post" action="$resumePath" autocomplete="off">
-                    #if($allowChangeDevice == true && $devices.size() > 1)
-                    <div class="step-link step-link--back" style="margin: 0; text-align: left;">
-                        <div style="margin: 0; text-align: left;">
-                            <button class="button pf-back-button" onclick="unselectDevice()"><span
-                                    class="pingicon-left"></span></button>
-                        </div>
-                    </div>
-                    #end
-                    <div class="org-logo"><img class="org-logo__image"
-                                               src="assets/images/ping-logo.svg"
-                                               alt="Company Logo"/></div>
-                    #if($errorMessageKey)
-                    <div class="feedback feedback--error" data-id="feedback"><span
-                            class="feedback__icon pingicon-error-triangle"></span>
-                        <div class="feedback__message">$languagePackMessages.getMessage($messageKeyPrefix,
-                            $errorMessageKey)
-                        </div>
-                    </div>
-                    #end
-                    <div class="stack stack--small" data-id="stack">
-                        <h1 class="heading" data-id="heading">$languagePackMessages.getMessage($deviceMessageKeyPrefix,
-                            "header")</h1>
-                        <div class="text-block" data-id="textblock">
-                            <div class="text-block--overflow-wrap">
-                                $languagePackMessages.getMessage($deviceMessageKeyPrefix,
-                                "message")
+<div class="app-container">
+    <div class="page brand-background" data-id="page">
+        <div class="page__content">
+            <div class="card card--no-padding">
+                <div class="card__content">
+                    <form id="form" class="form" data-id="form" method="post" action="$resumePath" autocomplete="off">
+                        #if($allowChangeDevice == true && $devices.size() > 1)
+                        <div class="step-link step-link--back" style="margin: 0; text-align: left;">
+                            <div style="margin: 0; text-align: left;">
+                                <button class="button pf-back-button" onclick="unselectDevice()"><span
+                                        class="pingicon-left"></span></button>
                             </div>
                         </div>
-                    </div>
-                    <div class="text-input__icon"></div>
-                    <input id="passcode" type="text" class="text-input text-input--primary" data-id="text-input"
-                           name="$otp" maxlength="6"
-                           value="" oninput="checkInput()" onkeypress="return checkOtpOnReturn(event)"/>
-                    <div class="form-aside">
-                        <div class="stack" data-id="stack">
-                            <div class="stack stack--small" data-id="stack">
-                                <div class="text-block" data-id="textblock">
-                                    <div class="text-block--overflow-wrap">
-                                        $languagePackMessages.getMessage($deviceMessageKeyPrefix,
-                                        "otp.sent.text")
+                        #end
+                        <div class="org-logo"><img class="org-logo__image"
+                                                   src="assets/images/ping-logo.svg"
+                                                   alt="Company Logo"/></div>
+                        #if($errorMessageKey)
+                        <div class="feedback feedback--error" data-id="feedback"><span
+                                class="feedback__icon pingicon-error-triangle"></span>
+                            <div class="feedback__message">$languagePackMessages.getMessage($messageKeyPrefix,
+                                $errorMessageKey)
+                            </div>
+                        </div>
+                        #end
+                        <div class="stack stack--small" data-id="stack">
+                            #if($deviceMessageKey != "mobile")
+                            <h1 class="heading" data-id="heading">$languagePackMessages.getMessage($deviceMessageKeyPrefix,
+                                "header")</h1>
+                            #else
+                            <h1 class="heading" data-id="heading">$selectedDevice.name</h1>
+                            #end
+                            <div class="text-block" data-id="textblock">
+                                <div class="text-block--overflow-wrap">
+                                    #if($deviceMessageKey == "mobile" && $selectedDevice.pushEnabled)
+                                    $languagePackMessages.getMessage($deviceMessageKeyPrefix, "push.message")
+                                    <a onclick="selectDevice('$selectedDevice.id')" data-id="change-button">$languagePackMessages.getMessage($deviceMessageKeyPrefix,
+                                            "push.message.retry")</a>
+                                    #else
+                                        $languagePackMessages.getMessage($deviceMessageKeyPrefix, "message")
+                                    #end
+                                </div>
+                            </div>
+                        </div>
+                        <div class="text-input__icon"></div>
+                        <input id="passcode" type="text" class="text-input text-input--primary input--otp" data-id="text-input"
+                               name="$otp" maxlength="6"
+                               value="" oninput="checkInput()" onkeypress="return checkOtpOnReturn(event)"/>
+
+                        <div class="form-aside">
+                            <div class="stack" data-id="stack">
+                                #if($deviceMessageKey != "totp" && $deviceMessageKey != "mobile")
+                                <div class="stack stack--small" data-id="stack">
+                                    <div class="text-block" data-id="textblock">
+                                        <div class="text-block--overflow-wrap">
+                                            $languagePackMessages.getMessage($deviceMessageKeyPrefix,
+                                            "otp.sent.text")
+                                        </div>
+                                    </div>
+                                    <div class="text-block text-block--large" data-id="textblock">
+                                        <div class="text-block--overflow-wrap">$escape.escape($selectedDevice.target)</div>
                                     </div>
                                 </div>
-                                <div class="text-block text-block--large" data-id="textblock">
-                                    <div class="text-block--overflow-wrap">$selectedDevice.target</div>
-                                </div>
-                            </div>
-                            <div>
-                                <button class="button file-input--button button--tertiary" data-id="button"
-                                        type="button" onclick="selectDevice('$selectedDevice.id')">
-                                    $languagePackMessages.getMessage($deviceMessageKeyPrefix,
-                                    "resend.button.title")
-                                </button>
-                                <input type="hidden" name="$selectedDeviceId" value=""/>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="text-block" data-id="textblock">
-                        <div class="text-block--overflow-wrap">
-                            <div class="stack" data-id="stack">
+                                #end
                                 <div>
-                                    <button id="sign-on" class="button file-input--button button--primary brand-primary-bg button--disabled"
-                                            data-id="button" type="button" onclick="checkOtp()" disabled>
-                                        $languagePackMessages.getMessage($messageKeyPrefix, "sign.on.button.title")
+                                    #if($deviceMessageKey != "totp" && $deviceMessageKey != "mobile")
+                                    <button class="button file-input--button button--tertiary" data-id="button"
+                                            type="button" onclick="selectDevice('$selectedDevice.id')">
+                                        $languagePackMessages.getMessage($deviceMessageKeyPrefix,
+                                        "resend.button.title")
                                     </button>
+                                    #end
+                                    <input type="hidden" name="$selectedDeviceId" value=""/>
                                 </div>
-                                <a tabindex="0" data-id="content-link" target="_self" class="anchor"
-                                   onclick="cancelAuthentication()">$languagePackMessages.getMessage($messageKeyPrefix,
-                                    "cancel.button.title")
-                                    <input type="hidden" name="$cancelAuthentication" value=""/>
-                                </a>
                             </div>
                         </div>
-                    </div>
-                </form>
+                        <div class="text-block" data-id="textblock">
+                            <div class="text-block--overflow-wrap">
+                                <div class="stack" data-id="stack">
+                                    <div>
+                                        <button id="sign-on" class="button file-input--button button--primary brand-primary-bg button--disabled"
+                                                data-id="button" type="button" onclick="checkOtp()" disabled>
+                                            $languagePackMessages.getMessage($messageKeyPrefix, "sign.on.button.title")
+                                        </button>
+                                    </div>
+                                    <a tabindex="0" data-id="content-link" target="_self" class="anchor"
+                                       onclick="cancelAuthentication()">$languagePackMessages.getMessage($messageKeyPrefix,
+                                        "cancel.button.title")
+                                        <input type="hidden" name="$cancelAuthentication" value=""/>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="page__footer">
-        <div class="ping-footer">
-            <div class="ping-credits"></div>
-            <div class="ping-copyright">$templateMessages.getMessage("global.footerMessage")</div>
+        <div class="page__footer">
+            <div class="ping-footer">
+                <div class="ping-credits"></div>
+                <div class="ping-copyright">$templateMessages.getMessage("global.footerMessage")</div>
+            </div>
         </div>
     </div>
 </div>
@@ -167,7 +189,14 @@ is not recommended as it may interfere with expected server behavior.
                 input.removeAttribute('name');
             }
         }
-        document.forms[0].submit();
+        var form = jQuery('form');
+        form.submit(function () {
+            jQuery(this).unbind('submit');
+            jQuery(this).submit(function () {
+                return false;
+            });
+        });
+        form.submit();
     }
 
     function isOnlyDigits(value) {
